[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ghkss"
version = "1.0.2"
description = "GHKSS filter"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Konstantin Seiler", email = "list@kseiler.de" }]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/kaymes/ghkss"

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
]
demo = [
    "scipy",
]

[tool.scikit-build.sdist]
exclude = [
    ".idea",
    "*build*",
    "dist",
    "*.so",
    "main_project",
]

[tool.scikit-build.wheel]
license-files = ["LICENSE.txt", "third_party/CLI11/LICENSE.txt", "third_party/pybind11/LICENSE.txt", "third_party/Eigen/LICENSE.txt"]

[tool.scikit-build.wheel.packages]
ghkss = "src/ghkss"


